@@ -3,7 +3,7 @@ Section: debian-installer
 Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>
-Build-Depends: po-debconf, debhelper (>= 4.2), dpkg-dev (>= 1.9.0)
+Build-Depends: po-debconf, debhelper (>= 7.3.10), dpkg-dev (>= 1.9.0)
 Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/pkgsel
 
 Package: pkgsel
