@@ -1,36 +1,8 @@
-#!/usr/bin/make -f
+#! /usr/bin/make -f
+%:
+	dh $@
 
-build:
-	dh_testdir
-
-clean:
-	dh_testdir
-	dh_testroot
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
+override_dh_install:
 	install -m755 pre-pkgsel.d/10popcon debian/pkgsel/usr/lib/pre-pkgsel.d
 	install -m755 pre-pkgsel.d/10laptop-detect debian/pkgsel/usr/lib/pre-pkgsel.d
 	dh_install
-
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installdebconf
-	dh_strip
-	dh_compress
-	dh_fixperms
-	cp debian/pkgsel.isinstallable debian/pkgsel/DEBIAN/isinstallable
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_builddeb
-
-binary-arch: build install
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
