@@ -1,6 +1,10 @@
 pkgsel (0.26) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Log the start of the different stages of pkgsel.
+
+  [ Colin Watson ]
+  * Upgrade to debhelper v7.
 
  -- Frans Pop <fjp@debian.org>  Mon, 03 Aug 2009 15:14:42 +0200
 
